--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pb-session",
+  "name": "oauth2-session",
   "version": "1.0.0",
   "description": "OAuth2 session module for Angular.",
   "main": "index.js",
