--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "oauth2-session",
-  "version": "1.0.0",
-  "description": "OAuth2 session module for Angular.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/packbud/oauth2-session.git"
+    "url": "https://github.com/packbud/oauth2-session.git"
+  },
+  "author": {
+    "name": "Roman Lyubimov",
+    "email": "raman@cmstuning.net"
   },
   "keywords": [
-    "angular",
-    "authentication",
-    "oauth2",
-    "module"
+    "angular"
   ],
-  "author": "Roman Lyubimov <raman@cmstuning.net>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/packbud/oauth2-session/issues"
+    "url": "https://github.com/packbud/oauth2-session.git/issues"
   },
-  "homepage": "https://github.com/packbud/oauth2-session#readme",
-  "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "rxjs": "^5.5.2"
-  },
+  "main": "oauth2-session.umd.js",
+  "module": "oauth2-session.js",
+  "jsnext:main": "oauth2-session.js",
+  "typings": "oauth2-session.d.ts",
   "dependencies": {
-    "query-string": "^5.0.1"
+    "query-string": "^5.0.0 | ^6.0.0"
+  },
+  "peerDependencies": {
+    "@angular/core": "^4.0.0 | ^5.0.0",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4"
   }
 }
